# transskribilo-boto

./: .gitignore  README.md  main.py  pyproject.toml
transskribilo/data/: data_utils.py  filter_wordlist.txt
